4.5 -> 5.0:
    - jbj: expose hRET_t through headerGetExtension prototypes.
    - jbj: unbork/simplify hRET_t indirections, too much acid in the Kool-Aid.
    - jbj: rpmdeps: unhide various CLI options.
    - jbj: rpmdeps: invoke rpm, not /bin/rpm.
    - bero: fix: RPMRC_FAIL, not non-existent RPMRC_BAD, return.
    - jbj: teach headerGetExtension() to allocate all returned data.
    - jbj: attempt using a pedantically correct union for header data.
    - jbj: mark --initdb and --verifydb code paths for destruction.
    - jbj: start making miRE abstract and refcounted.
    - jbj: convert rel to abs linkto depedency iff directory is known.
    - rpm.org: correct typo in comment.
    - rse: remove all compile-time warnings caused by recent changes
    - jbj: fix: add, not delete, the just read signature data.
    - jbj: update sv.po (Translation Project).
    - jbj: insure rpmlib -> rpmdb forward linkage only.
    - jbj: eliminate (*hdrchk) vector everywhere, use headerCheck() instead.
    - jbj: add metadata header stubs to pkgio.c.
    - jbj: move rpmtsFindPubkey() and rpmtsOp() to rpmdb for forward linkage.
    - jbj: add _RPMTS_PRINT to keep rpmrollback.c happy.
    - jbj: rearrange package.c internals to new locations.
    - jbj: start eliminating rpmtsSetSig by inlining.
    - jbj: eliminate rpmtsSigFoo() getters.
    - jbj: finish refactoring vsflags out of rpmts.
    - rpm.org: rename fileTypes_e and whatis() (for name spacing).
    - jbj: move (largely unused) fileTypes into rpmfi.h.
    - jbj: remove whatis() from rpmlib, use S_ISFOO() instead.
    - jbj: ensure that PLD setup & FHS packages install correctly.
    - jbj: wrapper for open(2).
    - rpm.org: ensure that yum's broken transaction checks "work" (#259961).
    - jbj: handle more white space in paths.
    - jbj: make the rpm hacker's entrance exam buggery harder (#281391).
    - jbj: don't punish monkeys who insist on "My Widdle .spec" naming.